--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "frontend",
+  "name": "chat_with_pdf",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.4.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.7.2",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.104",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "antd": "^5.19.4",
+    "axios": "^1.7.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-dropzone": "^14.2.3",
+    "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
-    "react-tabs": "^6.0.2",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -37,13 +43,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "babel": {
-  "presets": [
-    "react-app"
-  ],
-  "plugins": [
-    "@babel/plugin-proposal-private-property-in-object"
-  ]
-}
+  }
 }
